# slopahh_mood_muzik

./: .env.example  .gitignore  PRD0.md  README.md  api_specs.md  data_flow.md  docker-compose.yml  folder_structure.md  response_schema.md
backend/: .dockerignore  Dockerfile  init_db.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: database.py
backend/app/models/: mood_history.py
backend/app/services/: mood_service.py  playlist_service.py  song_library.py
backend/static/: index.html
backend/tests/: api_integration_test.py  db_audit.py  db_persistence_test.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: InteractiveVisualizer.jsx  VibeResults.jsx
frontend/src/services/: api.js
infra/: docker-compose.yml
