[project]
name = "slopahh-muzik-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-generativeai==0.3.2",
    "pydantic==2.5.3",
    "pytest==8.0.0",
    "python-dotenv==1.0.0",
    "requests>=2.32.5",
    "sqlalchemy==2.0.25",
]
